--- a/functions/package.json
+++ b/functions/package.json
@@ -16,30 +16,31 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@google-cloud/text-to-speech": "^3.1.1",
+    "@google-cloud/text-to-speech": "3.3.1",
     "cors": "^2.8.5",
-    "firebase-admin": "^9.3.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-admin": "9.11.1",
+    "firebase-functions": "3.15.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "firebase-functions-test": "^0.2.3",
-    "jest": "^26.6.1",
-    "prettier": "^2.1.2",
-    "ts-jest": "^26.4.3",
-    "typescript": "^4.0.5"
+    "@types/cors": "2.8.12",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.0.1",
+    "@types/mime": "2.0.3",
+    "@types/node": "14.17.15",
+    "@typescript-eslint/eslint-plugin": "4.31.1",
+    "@typescript-eslint/parser": "4.31.1",
+    "cross-env": "^7.0.3",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jest": "24.4.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "firebase-functions-test": "^0.3.2",
+    "jest": "27.2.0",
+    "prettier": "2.4.0",
+    "ts-jest": "27.0.5",
+    "typescript": "4.4.3"
   },
   "private": true,
   "eslintConfig": {
