--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@capacitor/core": "^2.4.2",
-    "@ionic/react": "^5.4.1",
-    "@ionic/react-router": "^5.4.1",
-    "@reduxjs/toolkit": "^1.4.0",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@vx/axis": "^0.0.197",
-    "@vx/scale": "^0.0.197",
-    "date-fns": "^2.16.1",
-    "firebase": "^8.0.0",
-    "formik": "^2.2.1",
-    "ionicons": "^5.2.3",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.1",
-    "react-audio-player": "^0.13.0",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "react-simple-keyboard": "^2.5.31",
-    "react-sizeme": "^2.6.12",
+    "@capacitor/core": "2.5.0",
+    "@ionic/react": "5.7.0",
+    "@ionic/react-router": "5.7.0",
+    "@reduxjs/toolkit": "1.6.1",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "13.2.1",
+    "@vx/axis": "^0.0.199",
+    "@vx/scale": "^0.0.199",
+    "date-fns": "2.23.0",
+    "firebase": "9.0.2",
+    "formik": "2.2.9",
+    "ionicons": "5.5.3",
+    "node-sass": "6.0.1",
+    "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "7.2.5",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.3.0",
+    "react-scripts": "4.0.3",
+    "react-simple-keyboard": "3.2.78",
+    "react-sizeme": "3.0.2",
     "zen-observable": "^0.8.15"
   },
   "eslintConfig": {
@@ -60,36 +60,36 @@
   },
   "description": "Simple vocabulary application made on React and Ionic with a backend on Firebase",
   "devDependencies": {
-    "@capacitor/cli": "^2.4.2",
-    "@types/d3-array": "^2.4.0",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
-    "@types/react-audio-player": "^0.11.0",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/webpack-env": "^1.15.3",
-    "@types/zen-observable": "^0.8.1",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "csv-parse": "^4.12.0",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
+    "@capacitor/cli": "2.5.0",
+    "@types/d3-array": "2.12.3",
+    "@types/jest": "27.0.1",
+    "@types/node": "14.17.15",
+    "@types/react": "17.0.20",
+    "@types/react-audio-player": "^0.13.0",
+    "@types/react-dom": "17.0.9",
+    "@types/react-redux": "7.1.18",
+    "@types/react-router": "5.1.16",
+    "@types/react-router-dom": "5.1.8",
+    "@types/webpack-env": "1.16.2",
+    "@types/zen-observable": "0.8.3",
+    "@typescript-eslint/eslint-plugin": "4.31.1",
+    "@typescript-eslint/parser": "4.31.1",
+    "csv-parse": "4.16.3",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jest": "24.4.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "firebase-admin": "^9.3.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.0",
-    "prettier": "^2.1.2",
+    "firebase-admin": "9.11.1",
+    "husky": "7.0.2",
+    "lint-staged": "11.1.2",
+    "prettier": "2.4.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.5"
+    "typescript": "4.4.3"
   },
   "husky": {
     "hooks": {
