--- a/functions/package.json
+++ b/functions/package.json
@@ -76,6 +76,8 @@
       }
     },
     "rules": {
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": ["error"],
       "import/extensions": [
         "error",
         "ignorePackages",
