--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rimraf ./build && react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)\"",
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"./src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
     "pre-commit": "lint-staged",
@@ -18,7 +18,11 @@
   },
   "private": true,
   "dependencies": {
+    "@capacitor/app": "1.1.0",
     "@capacitor/core": "3.4.1",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/keyboard": "1.2.2",
+    "@capacitor/status-bar": "1.0.8",
     "@ionic/react": "6.0.7",
     "@ionic/react-router": "6.0.7",
     "@reduxjs/toolkit": "1.7.2",
@@ -36,15 +40,25 @@
     "react-audio-player": "0.17.0",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "react-router": "6.2.1",
-    "react-router-dom": "6.2.1",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.2.1",
     "react-scripts": "5.0.0",
     "react-simple-keyboard": "3.4.59",
     "react-sizeme": "3.0.2",
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4",
     "zen-observable": "0.8.15"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -65,15 +79,12 @@
     "@types/jest": "27.4.0",
     "@types/node": "16.11.24",
     "@types/react": "17.0.39",
-    "@types/react-audio-player": "0.13.0",
     "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.22",
     "@types/react-router": "5.1.18",
     "@types/react-router-dom": "5.3.3",
     "@types/webpack-env": "1.16.3",
     "@types/zen-observable": "0.8.3",
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@typescript-eslint/parser": "5.11.0",
     "csv-parse": "5.0.4",
     "eslint": "8.9.0",
     "eslint-config-airbnb": "19.0.4",
@@ -82,7 +93,6 @@
     "eslint-plugin-jest": "26.1.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "firebase-admin": "10.0.2",
     "husky": "7.0.4",
@@ -94,6 +104,12 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run pre-commit"
+    }
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     }
   }
 }
